[package]
name = "rocket-time"
version = "0.1.0"
authors = ["Josh Lee <jleedev@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
rocket = "0.4.0"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "msgpack"]
