[package]
name = "rocket-time"
version = "0.1.0"
authors = ["Josh Lee <jleedev@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
rocket = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "msgpack"]
